--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
-          />
-        <p>@maykbrito</p>
+          alt="Foto do perfil de isaque.bernardo."
+        />
+        <p>@isaque.bernardo</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -23,37 +23,42 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="https://isaquecodes.github.io/projeto/">Ver meu portfólio</a>
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="https://wa.me/5583993416931"
+            >Entrar em contato
+            <style>
+              .icone {
+                margin-right: 6px; /* Ajuste este valor conforme necessário para o espaçamento desejado */
+              }
+            </style>
+            <span class="icone"></span>
+            <ion-icon name="logo-whatsapp"></ion-icon>
+          </a>
         </li>
 
         <li>
-          <a href="https://github.com/maykbrito">Ver meu portfólio</a>
-        </li>
-
-        <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o Explorer</a
+          <a href="https://rocketseat.com.br/discover" target="_blank"
+            >Conheça o Discover</a
           >
+        </li>
+
+        <li>
+          <a href="https://www.rocketseat.com.br/nlw">Inscrever-se no NLW</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com">
+        <a href="https://github.com/isaquecodes">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
-        <a href="https://instagram.com">
+        <a href="https://instagram.com/isaque.bernardo">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-
-        <a href="https://linkedin.com">
+        <a href="https://linkedin.com/in/isaque-bernardo-da-silva">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
