--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
       <ul>
         <li>
-          <a href="https://isaquecodes.github.io/projeto/">Ver meu portfólio</a>
+          <a href="https://isaquecodes.github.io/projeto/" target="_blank"
+            >Ver meu portfólio</a
+          >
         </li>
 
         <li>
-          <a href="https://wa.me/5583993416931"
+          <a href="https://wa.me/5583993416931" target="_blank"
             >Entrar em contato
             <style>
               .icone {
@@ -46,7 +48,7 @@
         </li>
 
         <li>
-          <a href="https://www.rocketseat.com.br/nlw">Inscrever-se no NLW</a>
+          <a href="https://www.rocketseat.com.br/nlw" target="_blank">Inscrever-se no NLW</a>
         </li>
       </ul>
       <div id="social-links">
@@ -63,7 +65,7 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/">Rocketseat</a>
+        Feito com ♥ pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
       </footer>
     </div>
 
