--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <ul>
         <li>
-          <a href="https://isaquecodes.github.io/projeto/" target="_blank"
+          <a href="https://github.com/isaquecodes" target="_blank"
             >Ver meu portfólio</a
           >
         </li>
@@ -48,7 +48,9 @@
         </li>
 
         <li>
-          <a href="https://www.rocketseat.com.br/nlw" target="_blank">Inscrever-se no NLW</a>
+          <a href="https://www.rocketseat.com.br/nlw" target="_blank"
+            >Inscrever-se no NLW</a
+          >
         </li>
       </ul>
       <div id="social-links">
@@ -65,7 +67,8 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+        Feito com ♥ pela
+        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
       </footer>
     </div>
 
