--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <ul>
         <li>
-          <a href="https://github.com/isaquecodes" target="_blank"
+          <a href="https://github.com/isaquecodes?tab=repositories" target="_blank"
             >Ver meu portfólio</a
           >
         </li>
